Chore/fix problems (#465)
* Fix analyze code issues
* Fix analyze code issues
* Fix sonar issues
* Optimize imports after useing frank framework code style
* Update imports to use Jakarta JSON and clean up POM formatting
* Retry optimize imports
* Fix editorconfig to only apply tabs to pom.xml and use text block in unit test instead of concatenated string
* Add README.md for Frank!Doc documentation and update .editorconfig for Java code style
* Update Checkstyle configuration and editorconfig for Frank!Framework
* Fix Java version in README.md
* Add @Nullable annotation to elementType in ConfigChildKey record
---------
Co-authored-by: Tim van der Leeuw <tim@wearefrank.nl>